# agent-project-manager

./: .env.example  .gitignore  AGENTS.md  README.md  agent_repo_compatibility.md  agents.py  config.json  graph.py  instructions.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: agent-project-manager.agent.md
.github/instructions/: outputs-folder.instructions.md  python-scripts.instructions.md  scripts-folder.instructions.md  skill-authoring.instructions.md  tmp-folder.instructions.md
.github/prompts/: diagnose.prompt.md  morning-report.prompt.md  plan-project.prompt.md  project-status.prompt.md  system.md
.tmp/: README.md  control_center_swaminath_tasks_create.py
.tmp/scripts/: create_julia_doc_page.py  create_mds_subtasks.py  create_mds_tasks.py  discover_review_status.py  fetch_julia.py  fix_julia_dates.py  ingest_resumes.py  list_docs.py  load_env.py  memory_search.py  project_data_manager.py  quick_workload.py  self_anneal_diagnostics.py  update_julia_tasks.py  update_list_colors.py  workload_analysis.py
agent-data/: INDEX.md  hr_structure.json
data/: INDEX.md  hr_structure.json  resume_profiles.json
outputs/: README.md  time_estimate_log.json  workload_report.json
outputs/_memory/: company_context.json  decision_journal.json  follow_ups.json  interaction_log.json  (+5 more)
prompts/: system.md
scripts/: discover_review_status.py  fetch_julia.py  fix_julia_dates.py  ingest_resumes.py  list_docs.py  project_data_manager.py  quick_workload.py  self_anneal_diagnostics.py  workload_analysis.py
tests/: test_agents.py  test_graph.py
(+80 files in other folders)
