[project]
name = "agent-project-manager"
version = "0.1.0"
description = "HR project management agent — plans, prioritises, delegates and tracks company projects via ClickUp."
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.1",
    "anthropic>=0.25",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
