[project]
name = "agent-project-manager"
version = "0.1.0"
description = "HR project management agent — plans, prioritises, delegates and tracks company projects via ClickUp."
requires-python = ">=3.11"

dependencies = [
    # CommandCenter MAF runtime (installed by executor — optional locally)
    # "agent-framework>=0.1",
    # Core
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    # HR / resume ingestion
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    # Technical planning scripts
    "requests>=2.31",
    # Tests
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
